# training-fast-api

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  workflow.yml
