[project]
name = "training-fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Tor344",email = "per7euse@gmail.com"}]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
